GWCFS-1143 PSP - Standardize doxygen layout

--- a/docs/dox_src/customs/cfs_header.tex
+++ b/docs/dox_src/customs/cfs_header.tex
@@ -127,7 +127,9 @@
 \begin{titlepage}
 \begin{center}%
 \vspace*{7.5cm}
-{\Huge CFS Time-Triggered Ethernet Library Software Design Document}\\
+{\Huge Core Flight System SP0-VxWorks6.9 Platform Support Package (PSP)}\\
+\vspace*{0.5cm}
+{\Huge Software Design Document}\\
 \vspace*{0.5cm}
 {\Huge Section 5.0}\\
 \end{center}
